# tla_visualiser

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  build.bat  build.sh  conanfile.txt  simulate_workflow.sh
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BUILDING.md  CI_CD.md
examples/: README.md  SimpleCounter.tla
include/: github_importer.h  state_graph_model.h  tlc_runner.h  trace_viewer_model.h
qml/: GraphView.qml  ImportView.qml  InvariantView.qml  TraceView.qml  main.qml
src/: github_importer.cpp  main.cpp  state_graph_model.cpp  tlc_runner.cpp  trace_viewer_model.cpp
tests/: CMakeLists.txt  test_github_importer.cpp  test_tlc_runner.cpp
